--- a/oshealthrec-website/public/mitarbeiter/profil.html
+++ b/oshealthrec-website/public/mitarbeiter/profil.html
@@ -38,6 +38,9 @@
 </nav>
 
 <div class="container">
+    <div class="alert alert-danger hidden" role="alert" id="alert">
+        Ein Fehler ist aufgetreten. Bitte laden Sie die Seite erneut!
+    </div>
     <div class="row">
         <div class="col-12">
             <div class="text-center">
@@ -87,6 +90,9 @@
         let participantId = sessionStorage.getItem("participantId");
         let participantType = sessionStorage.getItem("participantType");
 
+        let spinner = $('#spinner');
+        let alertDiv = $('#alert');
+
         // Leite Nutzer zurück auf die Startseite, wenn es sich nicht um einen Mitarbeiter handelt
         if (participantType != "Employee") {
             window.location.href = "../index.html";
@@ -98,6 +104,12 @@
             credentials: 'include'
         });
         let mitarbeiterProfil = await response.json();
+
+        if (response.status != 200) {
+            alertDiv.removeClass('hidden');
+            spinner.addClass('hidden');
+            console.log(response);
+        }
 
         // Hole Textfelder als jquery Variable
         let vorname = $('#vorname');
@@ -111,7 +123,7 @@
         geschlecht.text(mitarbeiterProfil.sex);
         geburtsdatum.text(mitarbeiterProfil.birthday);
 
-        let spinner = $('#spinner');
+
         spinner.addClass('hidden');
     });
 </script>
