--- a/oshealthrec-website/public/doktor/profil.html
+++ b/oshealthrec-website/public/doktor/profil.html
@@ -65,7 +65,7 @@
                 <dt class="col-sm-2">Nachname</dt>
                 <dd class="col-sm-10" id="nachname"></dd>
 
-                <dt class="col-sm-2">Fachrbereich</dt>
+                <dt class="col-sm-2">Fachbereich</dt>
                 <dd class="col-sm-10" id="fachbereich"></dd>
 
                 <dt class="col-sm-2">Geschlecht</dt>
