Filter nach Arztbezeichnung eingefügt

--- a/oshealthrec-website/public/patient/arzt-suche.html
+++ b/oshealthrec-website/public/patient/arzt-suche.html
@@ -65,6 +65,8 @@
                        placeholder="Name">
                 <input type="text" class="form-control mb-2" id="inputAdresse" onkeyup="filterDoctorTable()"
                        placeholder="Adresse">
+                <input type="text" class="form-control mb-2" id="inputArztbezeichnung" onkeyup="filterDoctorTable()"
+                       placeholder="Arztbezeichnung">
             </form>
         </div>
     </div>
