--- a/oshealthrec-website/public/mitarbeiter/patient.html
+++ b/oshealthrec-website/public/mitarbeiter/patient.html
@@ -107,7 +107,6 @@
                     <th scope="col">Beschreibung</th>
                     <th scope="col">Datum</th>
                     <th scope="col">Arzt</th>
-                    <th scope="col">Hochgeladen von</th>
                     <th scope="col"></th>
                 </tr>
                 </thead>
@@ -260,11 +259,11 @@
                 "<td>" + report.description + "</td>" +
                 "<td>" + date + "</td>" +
                 "<td>" + doctor.title + " " + doctor.givenname + " " + doctor.surname + "</td>";
-            if (sessionStorage.getItem("participantId") === doctorId) {
-                appendString += "<td>" + uploadedBy.givenname + " " + uploadedBy.surname + "</td>";
-            } else {
-                appendString += "<td>" + " " + "</td>";
-            }
+            // if (sessionStorage.getItem("participantId") === doctorId) {
+            //     appendString += "<td>" + uploadedBy.givenname + " " + uploadedBy.surname + "</td>";
+            // } else {
+            //     appendString += "<td>" + " " + "</td>";
+            // }
             appendString += "<td align='right'><button type=\"button\" class=\"btn btn-outline-primary btn-block button-table\" onclick='downloadReport(\"" + report.ref_location + "\")'>Herunterladen</button></td></tr>";
 
             reportTabelle.append(appendString);
