--- a/oshealthrec-website/public/patient/dokumente.html
+++ b/oshealthrec-website/public/patient/dokumente.html
@@ -71,7 +71,7 @@
     </div>
     <div class="row">
         <div class="col-sm-12">
-            <table class="table table-hover" data-sortable="true">
+            <table class="table table-hover" data-toggle="table" data-sortable="true">
                 <thead>
                 <tr>
                     <th scope="col">ID</th>
