Sortierung der Tabelle angepasst

--- a/oshealthrec-website/public/patient/dokumente.html
+++ b/oshealthrec-website/public/patient/dokumente.html
@@ -74,12 +74,12 @@
             <table class="table table-hover" data-toggle="table" data-sortable="true">
                 <thead>
                 <tr>
-                    <th scope="col">ID</th>
-                    <th scope="col">Titel</th>
-                    <th scope="col">Beschreibung</th>
-                    <th scope="col">Datum</th>
-                    <th scope="col">Hochgeladen von</th>
-                    <th scope="col"></th>
+                    <th scope="col" data-sortable="true">ID</th>
+                    <th scope="col" data-sortable="true">Titel</th>
+                    <th scope="col" data-sortable="true">Beschreibung</th>
+                    <th scope="col" data-sortable="true">Datum</th>
+                    <th scope="col" data-sortable="true">Hochgeladen von</th>
+                    <th scope="col" data-sortable="true"></th>
                 </tr>
                 </thead>
                 <tbody id="reportTabelle">
