--- a/oshealthrec-website/public/patient/dokumente.html
+++ b/oshealthrec-website/public/patient/dokumente.html
@@ -71,7 +71,7 @@
     </div>
     <div class="row">
         <div class="col-sm-12">
-            <table class="table table-hover" data-toggle="table" data-sortable="true">
+            <table class="table table-hover" data-sortable="true">
                 <thead>
                 <tr>
                     <th scope="col" data-sortable="true">ID</th>
@@ -79,7 +79,7 @@
                     <th scope="col" data-sortable="true">Beschreibung</th>
                     <th scope="col" data-sortable="true">Datum</th>
                     <th scope="col" data-sortable="true">Hochgeladen von</th>
-                    <th scope="col" data-sortable="true"></th>
+                    <th scope="col"></th>
                 </tr>
                 </thead>
                 <tbody id="reportTabelle">
