--- a/oshealthrec-website/public/patient/dokumente.html
+++ b/oshealthrec-website/public/patient/dokumente.html
@@ -71,18 +71,18 @@
     </div>
     <div class="row">
         <div class="col-sm-12">
-            <table id="reportTabelle" class="table table-hover" data-toggle="bootstrap-table" data-sortable="true">
+            <table id="reportTabelle" class="table table-hover" data-toggle="table" data-sortable="true">
                 <thead>
                 <tr>
-                    <th scope="col" data-sortable="true">ID</th>
-                    <th scope="col" data-sortable="true">Titel</th>
-                    <th scope="col" data-sortable="true">Beschreibung</th>
-                    <th scope="col" data-sortable="true">Datum</th>
-                    <th scope="col" data-sortable="true">Hochgeladen von</th>
+                    <th scope="col" data-field="reportID" data-sortable="true">ID</th>
+                    <th scope="col" data-field="title" data-sortable="true">Titel</th>
+                    <th scope="col" data-field="description" data-sortable="true">Beschreibung</th>
+                    <th scope="col" data-field="date" data-sortable="true">Datum</th>
+                    <th scope="col" data-field="uploadedForDr" data-sortable="true">Hochgeladen von</th>
                     <th scope="col"></th>
                 </tr>
                 </thead>
-<!--                <tbody >-->
+<!--                <tbody id="reportTabelle">-->
 
 <!--                </tbody>-->
             </table>
@@ -157,27 +157,30 @@
             console.log(doctorResponse);
         }
 
+        var $table = $('#reportTabelle');
+        $table.bootstrapTable({data: reportArray});
+
         // Gebe Informationen von allen Reports aus
-        reportArray.forEach(function (report) {
-            // Hole Id des Doktors, der den Report hochgeladen hat
-            let doctorId = report.uploadedForDr.split('Doctor#')[1];
-
-            // Hole Doktor mit der übergebenen Id aus dem DoktorArray
-            let doctor = doctorArray.find(d => d.personID === doctorId);
-
-            let date = report.date.split('T')[0];
-
-            let appendString = "<tr>" +
-                "<td>" + report.reportID + "</td>" +
-                "<td>" + report.title + "</td>" +
-                "<td>" + report.description + "</td>" +
-                "<td>" + date + "</td>" +
-                "<td>" + doctor.title + " " + doctor.givenname + " " + doctor.surname + "</td>" +
-                "<td align='right'><button type=\"button\" class=\"btn btn-outline-primary btn-block button-table\" onclick='downloadReport(\"" + report.ref_location + "\")'>Herunterladen</button></td>" +
-                "</tr>";
-
-            reportTabelle.append(appendString);
-        });
+        // reportArray.forEach(function (report) {
+        //     // Hole Id des Doktors, der den Report hochgeladen hat
+        //     let doctorId = report.uploadedForDr.split('Doctor#')[1];
+        //
+        //     // Hole Doktor mit der übergebenen Id aus dem DoktorArray
+        //     let doctor = doctorArray.find(d => d.personID === doctorId);
+        //
+        //     let date = report.date.split('T')[0];
+        //
+        //     let appendString = "<tr>" +
+        //         "<td>" + report.reportID + "</td>" +
+        //         "<td>" + report.title + "</td>" +
+        //         "<td>" + report.description + "</td>" +
+        //         "<td>" + date + "</td>" +
+        //         "<td>" + doctor.title + " " + doctor.givenname + " " + doctor.surname + "</td>" +
+        //         "<td align='right'><button type=\"button\" class=\"btn btn-outline-primary btn-block button-table\" onclick='downloadReport(\"" + report.ref_location + "\")'>Herunterladen</button></td>" +
+        //         "</tr>";
+        //
+        //     reportTabelle.append(appendString);
+        // });
 
         spinner.addClass('hidden');
     });
