Sortierung der Tabelle angepasst

--- a/oshealthrec-website/public/patient/dokumente.html
+++ b/oshealthrec-website/public/patient/dokumente.html
@@ -157,6 +157,8 @@
             console.log(doctorResponse);
         }
 
+        console.log(reportArray);
+
         var $table = $('#reportTabelle');
         $table.bootstrapTable({data: reportArray});
 
