Sortierung der Tabelle eingefügt

--- a/oshealthrec-website/public/patient/freigaben.html
+++ b/oshealthrec-website/public/patient/freigaben.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.15.4/dist/bootstrap-table.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/oshealthrec.css">
@@ -77,18 +78,15 @@
     </div>
     <div class="row">
         <div class="col-sm-12">
-            <table class="table table-hover mt-3">
+            <table id="arztTabelle" class="table table-hover mt-3" data-toggle="table" data-sortable="true">
                 <thead>
                 <tr>
-                    <th scope="col">Name</th>
-                    <th scope="col">Anschrift</th>
-                    <th scope="col">Arztbezeichnung</th>
-                    <th></th>
+                    <th scope="col" data-field="name" data-sortable="true">Name</th>
+                    <th scope="col" data-field="anschrift" data-sortable="true">Anschrift</th>
+                    <th scope="col" data-field="arztbezeichnung" data-sortable="true">Arztbezeichnung</th>
+                    <th data-field="button"></th>
                 </tr>
                 </thead>
-                <tbody id="arztTabelle">
-
-                </tbody>
             </table>
         </div>
 
@@ -107,6 +105,7 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+<script src="https://unpkg.com/bootstrap-table@1.15.4/dist/bootstrap-table.min.js"></script>
 
 <script src="../app.js"></script>
 
@@ -206,17 +205,31 @@
                 console.log(doctorResponse);
             }
 
+            let tableData = [];
+
+
+
             // Gebe Daten für alle Ärzte aus
             doctorProfileArray.forEach(function (doctor) {
-                let appendString = "<tr>" +
-                    "<td>" + doctor.givenname + " " + doctor.surname + "</td>" +
-                    "<td>" + doctor.street + "<br />" + doctor.zipcode + " " + doctor.city + "<br />" + doctor.country + "</td>" +
-                    "<td>" + doctor.medical_specialty + "</td>" +
-                    "<td align='right'><button type=\"button\" class=\"btn btn-outline-primary btn-block button-table\" onclick='withdrawDoctor(\"" + doctor.personID + "\")'>Berechtigung entziehen</button></td>" +
-                    "</tr>";
 
-                arztTabelle.append(appendString);
+                tableData.push({
+                    name: doctor.givenname + " " + doctor.surname,
+                    anschrift: doctor.street + "<br />" + doctor.zipcode + " " + doctor.city + "<br />" + doctor.country,
+                    arztbezeichnung: doctor.medical_specialty,
+                    button: "<button type=\"button\" class=\"btn btn-outline-primary btn-block button-table\" onclick='withdrawDoctor(\"" + doctor.personID + "\")'>Berechtigung entziehen</button>"
+                });
+
+                // let appendString = "<tr>" +
+                //     "<td>" + doctor.givenname + " " + doctor.surname + "</td>" +
+                //     "<td>" + doctor.street + "<br />" + doctor.zipcode + " " + doctor.city + "<br />" + doctor.country + "</td>" +
+                //     "<td>" + doctor.medical_specialty + "</td>" +
+                //     "<td align='right'><button type=\"button\" class=\"btn btn-outline-primary btn-block button-table\" onclick='withdrawDoctor(\"" + doctor.personID + "\")'>Berechtigung entziehen</button></td>" +
+                //     "</tr>";
+                //
+                // arztTabelle.append(appendString);
             })
+
+            arztTabelle.bootstrapTable('load', tableData);
         }
 
         spinner.addClass('hidden');
