Sortierung der Tabelle hinzugefügt

--- a/oshealthrec-website/public/doktor/patienten.html
+++ b/oshealthrec-website/public/doktor/patienten.html
@@ -225,7 +225,7 @@
                 // patientenTabelle.append(appendString);
             });
 
-            mitarbeiterTabelle.bootstrapTable('load', tableData);
+            patientenTabelle.bootstrapTable('load', tableData);
         }
 
         spinner.addClass('hidden');
