--- a/oshealthrec-website/public/doktor/patienten.html
+++ b/oshealthrec-website/public/doktor/patienten.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.15.4/dist/bootstrap-table.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/oshealthrec.css">
@@ -74,11 +73,11 @@
     </div>
     <div class="row">
         <div class="col-sm-12">
-            <table id="patientenTabelle" class="table table-hover mt-5" data-toggle="table" data-sortable="true" data-row-attributes="rowAttributes">
+            <table id="patientenTabelle" class="table table-hover mt-5" data-toggle="table" data-sortable="true">
                 <thead>
                 <tr>
-                    <th scope="col" data-field="name" data-sortable="true">Name</th>
-                    <th scope="col" data-field="geburtsdatum" data-sortable="true">Geburtsdatum</th>
+                    <th scope="col">Name</th>
+                    <th scope="col">Geburtsdatum</th>
                 </tr>
                 </thead>
             </table>
@@ -97,7 +96,6 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
-<script src="https://unpkg.com/bootstrap-table@1.15.4/dist/bootstrap-table.min.js"></script>
 
 <script src="../app.js"></script>
 
@@ -205,27 +203,16 @@
             let patientProfileArrayJson = JSON.stringify(patientProfileArray);
             sessionStorage.setItem("patientProfileArray", patientProfileArrayJson);
 
-            let tableData = [];
-            let i = 0;
-
             // Gebe Daten für alle Patienten aus
             patientProfileArray.forEach(function (patient) {
-                tableData.push({
-                    name: patient.givenname + " " + patient.surname,
-                    geburtsdatum: patient.birthday,
-                });
-                patientIDs[i] = patient.personID;
-                i++;
+                let appendString = "<tr class='clickable-row' data-href='/doktor/patient.html?Id=" + patient.personID + "'>" +
+                    "<td>" + patient.givenname + " " + patient.surname + "</td>" +
+                    "<td>" + patient.birthday + "</td>" +
+                    "</tr>";
 
-                // let appendString = "<tr class='clickable-row' data-href='/doktor/patient.html?Id=" + patient.personID + "'>" +
-                //     "<td>" + patient.givenname + " " + patient.surname + "</td>" +
-                //     "<td>" + patient.birthday + "</td>" +
-                //     "</tr>";
-                //
-                // patientenTabelle.append(appendString);
+                patientenTabelle.append(appendString);
             });
 
-            patientenTabelle.bootstrapTable('load', tableData);
         }
 
         spinner.addClass('hidden');
@@ -234,13 +221,6 @@
         $(".clickable-row").click(function () {
             window.location = $(this).data("href");
         })
-
-        function rowAttributes(row, index) {
-            return {
-                'class': 'clickable-row',
-                'data-href': '/doktor/patient.html?Id=' + patientIDs[index]
-            };
-        }
     });
 </script>
 </body>
