Sortierung der Tabelle hinzugefügt

--- a/oshealthrec-website/public/doktor/patienten.html
+++ b/oshealthrec-website/public/doktor/patienten.html
@@ -73,7 +73,7 @@
     </div>
     <div class="row">
         <div class="col-sm-12">
-            <table id="patientenTabelle" class="table table-hover mt-5" data-toggle="table" data-sortable="true">
+            <table id="patientenTabelle" class="table table-hover mt-5">
                 <thead>
                 <tr>
                     <th scope="col">Name</th>
