--- a/oshealthrec-website/public/doktor/patient.html
+++ b/oshealthrec-website/public/doktor/patient.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.15.4/dist/bootstrap-table.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/oshealthrec.css">
@@ -105,21 +106,18 @@
     </div>
     <div class="row">
         <div class="col-12">
-            <table class="table table-hover mt-3">
+            <table id="reportTabelle" class="table table-hover mt-3"  data-toggle="table" data-sortable="true">
                 <thead>
                 <tr>
-                    <th scope="col">ID</th>
-                    <th scope="col">Titel</th>
-                    <th scope="col">Beschreibung</th>
-                    <th scope="col">Datum</th>
-                    <th scope="col">Arzt</th>
-                    <th scope="col">Hochgeladen von</th>
-                    <th scope="col"></th>
+                    <th scope="col" data-field="reportID" data-sortable="true">ID</th>
+                    <th scope="col" data-field="title" data-sortable="true">Titel</th>
+                    <th scope="col" data-field="description" data-sortable="true">Beschreibung</th>
+                    <th scope="col" data-field="date" data-sortable="true">Datum</th>
+                    <th scope="col" data-field="uploadedForDr" data-sortable="true">Arzt</th>
+                    <th scope="col" data-field="uploadedBy" data-sortable="true">Hochgeladen von</th>
+                    <th scope="col" data-field="download"></th>
                 </tr>
                 </thead>
-                <tbody id="reportTabelle">
-
-                </tbody>
             </table>
         </div>
     </div>
@@ -136,6 +134,7 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+<script src="https://unpkg.com/bootstrap-table@1.15.4/dist/bootstrap-table.min.js"></script>
 
 <!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
 <script src="https://www.gstatic.com/firebasejs/6.4.1/firebase-app.js"></script>
@@ -241,6 +240,8 @@
             console.log(response);
         }
 
+        let tableData = [];
+
         // Gebe Daten für alle Reports aus
         reportArray.forEach(function (report) {
 
@@ -259,21 +260,32 @@
 
             let date = report.date.split('T')[0];
 
-            let appendString = "<tr>" +
-                "<td>" + report.reportID + "</td>" +
-                "<td>" + report.title + "</td>" +
-                "<td>" + report.description + "</td>" +
-                "<td>" + date + "</td>" +
-                "<td>" + doctor.title + " " + doctor.givenname + " " + doctor.surname + "</td>";
             if (sessionStorage.getItem("participantId") === doctorId) {
-                appendString += "<td>" + uploadedBy.givenname + " " + uploadedBy.surname + "</td>";
+                tableData.push({
+                    reportID: report.reportID,
+                    title: report.title,
+                    description: report.description,
+                    date: date,
+                    uploadedForDr: doctor.title + " " + doctor.givenname + " " + doctor.surname,
+                    uploadedBy: uploadedBy.givenname + " " + uploadedBy.surname,
+                    download: "<button type=\"button\" class=\"btn btn-outline-primary btn-block button-table\" onclick='downloadReport(\"" + report.ref_location + "\")'>Herunterladen</button>"
+                });
             } else {
-                appendString += "<td>" + " " + "</td>";
+                tableData.push({
+                    reportID: report.reportID,
+                    title: report.title,
+                    description: report.description,
+                    date: date,
+                    uploadedForDr: doctor.title + " " + doctor.givenname + " " + doctor.surname,
+                    uploadedBy: "",
+                    download: "<button type=\"button\" class=\"btn btn-outline-primary btn-block button-table\" onclick='downloadReport(\"" + report.ref_location + "\")'>Herunterladen</button>"
+                });
             }
             appendString += "<td align='right'><button type=\"button\" class=\"btn btn-outline-primary\" onclick='downloadReport(\"" + report.ref_location + "\")'>Herunterladen</button></td></tr>";
 
-            reportTabelle.append(appendString);
         });
+
+        reportTabelle.bootstrapTable('load', tableData);
 
         spinner.addClass('hidden');
     });
