--- a/oshealthrec-website/public/doktor/patienten.html
+++ b/oshealthrec-website/public/doktor/patienten.html
@@ -73,12 +73,14 @@
     </div>
     <div class="row">
         <div class="col-sm-12">
-            <table id="patientenTabelle" class="table table-hover mt-5">
+            <table class="table table-hover mt-5">
                 <thead>
                 <tr>
                     <th scope="col">Name</th>
                     <th scope="col">Geburtsdatum</th>
                 </tr>
+                <tbody id="patientenTabelle">
+                </tbody>
                 </thead>
             </table>
         </div>
