--- a/oshealthrec-website/Vorlagen/vorlage-patient.html
+++ b/oshealthrec-website/Vorlagen/vorlage-patient.html
@@ -9,10 +9,12 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="../public/css/oshealthrec.css">
 
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
     <title>OSHealthRec</title>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light mb-3">
+<nav class="navbar  navbar-light bg-light navbar-expand-lg mb-3">
     <a class="navbar-brand" href="profil.html">
         <img src="../public/images/OSHealthRec-Logo.png" alt="OSHealthRec Logo">
     </a>
@@ -23,18 +25,16 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active ml-5">
-                <a class="nav-link" href="profil.html">Profil <span class="sr-only">(current)</span> </a>
+                <a class="nav-link" href="profil.html"><i class="material-icons bi">account_circle</i> Profil <span class="sr-only">(current)</span> </a>
             </li>
             <li class="nav-item ml-5">
-                <a class="nav-link" href="dokumente.html">Dokumente</a>
+                <a class="nav-link" href="dokumente.html"><i class="material-icons bi">folder</i> Dokumente</a>
             </li>
             <li class="nav-item ml-5">
-                <a class="nav-link" href="freigaben.html">Freigaben</a>
+                <a class="nav-link" href="freigaben.html"><i class="material-icons bi">how_to_reg</i> Freigaben</a>
             </li>
         </ul>
-        <button type="button" class="btn btn-secondary btn-sm ml-5">
-            Log out
-        </button>
+        <button class="btn material-icons" onclick="logout()">exit_to_app</button>
     </div>
 </nav>
 
