--- a/oshealthrec-website/public/patient/scan-qr.html
+++ b/oshealthrec-website/public/patient/scan-qr.html
@@ -27,30 +27,27 @@
     <script type="text/javascript" src="../js/instascan.min.js"></script>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light mb-3">
+<nav class="navbar  navbar-light bg-light navbar-expand-lg mb-3">
     <a class="navbar-brand" href="profil.html">
-        <img src="../images/OSHealthRec-Logo.png" alt="OSHealthRec Logo">
+        <img src="../public/images/OSHealthRec-Logo.png" alt="OSHealthRec Logo">
     </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item ml-5">
-                <a class="nav-link" href="profil.html">Profil <span class="sr-only">(current)</span> </a>
+                <a class="nav-link" href="profil.html"><i class="material-icons bi">account_circle</i> Profil <span class="sr-only">(current)</span> </a>
             </li>
             <li class="nav-item ml-5">
-                <a class="nav-link" href="dokumente.html">Dokumente</a>
+                <a class="nav-link" href="dokumente.html"><i class="material-icons bi">folder</i> Dokumente</a>
             </li>
             <li class="nav-item ml-5 active">
-                <a class="nav-link" href="freigaben.html">Freigaben</a>
+                <a class="nav-link" href="freigaben.html"><i class="material-icons bi">how_to_reg</i> Freigaben</a>
             </li>
         </ul>
-        <button type="button" class="btn btn-secondary btn-sm ml-5" onclick="logout()">
-            Log out
-        </button>
+        <button class="btn material-icons" onclick="logout()">exit_to_app</button>
     </div>
 </nav>
 
