--- a/oshealthrec-website/Vorlagen/vorlage-patient.html
+++ b/oshealthrec-website/Vorlagen/vorlage-patient.html
@@ -25,13 +25,13 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active ml-5">
-                <a class="nav-link" href="profil.html"><i class="material-icons bi">account_circle</i> Profil <span class="sr-only">(current)</span> </a>
+                <a class="nav-link" href="profil.html"><i class="material-icons big">account_circle</i> Profil <span class="sr-only">(current)</span> </a>
             </li>
             <li class="nav-item ml-5">
-                <a class="nav-link" href="dokumente.html"><i class="material-icons bi">folder</i> Dokumente</a>
+                <a class="nav-link" href="dokumente.html"><i class="material-icons big">folder</i> Dokumente</a>
             </li>
             <li class="nav-item ml-5">
-                <a class="nav-link" href="freigaben.html"><i class="material-icons bi">how_to_reg</i> Freigaben</a>
+                <a class="nav-link" href="freigaben.html"><i class="material-icons big">how_to_reg</i> Freigaben</a>
             </li>
         </ul>
         <button class="btn material-icons" onclick="logout()">exit_to_app</button>
@@ -40,7 +40,28 @@
 
 <div class="container">
     <div class="row">
-
+        <div class="col"></div>
+        <div class="col">
+            <div class="card bg-light">
+                <div class="card-body">
+                    Vorname
+                    Ole<br>
+                    Nachname
+                    Kohl<br>
+                    Geschlecht
+                    Männlich<br>
+                    Geburtsdatum
+                    05.03.1997<br>
+                    Intoleranzen
+                    Nikotinallergie, Allergische Rhinitis<br>
+                    Blutgruppe
+                    AB Rh pos<br>
+                    Notfallkontakt
+                    01764379124
+                </div>
+            </div>
+        </div>
+        <div class="col"></div>
     </div>
 </div>
 
