--- a/oshealthrec-website/public/patient/freigaben.html
+++ b/oshealthrec-website/public/patient/freigaben.html
@@ -27,13 +27,13 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item ml-5">
-                <a class="nav-link" href="profil.html"><i class="material-icons bi">account_circle</i> Profil <span class="sr-only">(current)</span> </a>
+                <a class="nav-link" href="profil.html"><i class="material-icons big">account_circle</i> Profil <span class="sr-only">(current)</span> </a>
             </li>
             <li class="nav-item ml-5">
-                <a class="nav-link" href="dokumente.html"><i class="material-icons bi">folder</i> Dokumente</a>
+                <a class="nav-link" href="dokumente.html"><i class="material-icons big">folder</i> Dokumente</a>
             </li>
             <li class="nav-item active ml-5">
-                <a class="nav-link" href="freigaben.html"><i class="material-icons bi">how_to_reg</i> Freigaben</a>
+                <a class="nav-link" href="freigaben.html"><i class="material-icons big">how_to_reg</i> Freigaben</a>
             </li>
         </ul>
         <button class="btn material-icons" onclick="logout()">exit_to_app</button>
