--- a/oshealthrec-website/public/patient/profil.html
+++ b/oshealthrec-website/public/patient/profil.html
@@ -19,20 +19,22 @@
     <a class="navbar-brand" href="profil.html">
         <img src="../images/OSHealthRec-Logo.png" alt="OSHealthRec Logo">
     </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active ml-5">
-                <a class="nav-link" href="profil.html"><i class="material-icons bi">account_circle</i> Profil <span class="sr-only">(current)</span> </a>
+                <a class="nav-link" href="profil.html"><i class="material-icons big">account_circle</i> Profil <span
+                        class="sr-only">(current)</span> </a>
             </li>
             <li class="nav-item ml-5">
-                <a class="nav-link" href="dokumente.html"><i class="material-icons bi">folder</i> Dokumente</a>
+                <a class="nav-link" href="dokumente.html"><i class="material-icons big">folder</i> Dokumente</a>
             </li>
             <li class="nav-item ml-5">
-                <a class="nav-link" href="freigaben.html"><i class="material-icons bi">how_to_reg</i> Freigaben</a>
+                <a class="nav-link" href="freigaben.html"><i class="material-icons big">how_to_reg</i> Freigaben</a>
             </li>
         </ul>
         <button class="btn material-icons" onclick="logout()">exit_to_app</button>
@@ -53,30 +55,36 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-12">
-            <dl class="row">
-                <dt class="col-sm-2">Vorname</dt>
-                <dd class="col-sm-10" id="vorname"></dd>
+        <div class="col"></div>
+        <div class="col">
+            <div class="card bg-light">
+                <div class="card-body">
+                    <dl class="row">
+                        <dt class="col-sm-2">Vorname</dt>
+                        <dd class="col-sm-10" id="vorname"></dd>
 
-                <dt class="col-sm-2">Nachname</dt>
-                <dd class="col-sm-10" id="nachname"></dd>
+                        <dt class="col-sm-2">Nachname</dt>
+                        <dd class="col-sm-10" id="nachname"></dd>
 
-                <dt class="col-sm-2">Geschlecht</dt>
-                <dd class="col-sm-10" id="geschlecht"></dd>
+                        <dt class="col-sm-2">Geschlecht</dt>
+                        <dd class="col-sm-10" id="geschlecht"></dd>
 
-                <dt class="col-sm-2">Geburtsdatum</dt>
-                <dd class="col-sm-10" id="geburtsdatum"></dd>
+                        <dt class="col-sm-2">Geburtsdatum</dt>
+                        <dd class="col-sm-10" id="geburtsdatum"></dd>
 
-                <dt class="col-sm-2">Intoleranzen</dt>
-                <dd class="col-sm-10" id="intoleranzen"></dd>
+                        <dt class="col-sm-2">Intoleranzen</dt>
+                        <dd class="col-sm-10" id="intoleranzen"></dd>
 
-                <dt class="col-sm-2">Blutgruppe</dt>
-                <dd class="col-sm-10" id="blutgruppe"></dd>
+                        <dt class="col-sm-2">Blutgruppe</dt>
+                        <dd class="col-sm-10" id="blutgruppe"></dd>
 
-                <dt class="col-sm-2">Notfallkontakt</dt>
-                <dd class="col-sm-10" id="notfallkontakt"></dd>
-            </dl>
+                        <dt class="col-sm-2">Notfallkontakt</dt>
+                        <dd class="col-sm-10" id="notfallkontakt"></dd>
+                    </dl>
+                </div>
+            </div>
         </div>
+        <div class="col"></div>
     </div>
 </div>
 
