--- a/oshealthrec-website/public/patient/profil.html
+++ b/oshealthrec-website/public/patient/profil.html
@@ -56,7 +56,7 @@
     </div>
     <div class="row">
         <div class="col"></div>
-        <div class="col-10">
+        <div class="col-auto">
             <div class="card bg-light">
                 <div class="card-body">
                     <dl class="row">
