Profil Design angepasst

--- a/oshealthrec-website/public/patient/profil.html
+++ b/oshealthrec-website/public/patient/profil.html
@@ -60,26 +60,26 @@
             <div class="card bg-light">
                 <div class="card-body">
                     <dl class="row">
-                        <dt class="col-sm-2">Vorname</dt>
-                        <dd class="col-sm-10" id="vorname"></dd>
+                        <dt class="col-3">Vorname</dt>
+                        <dd class="col-9" id="vorname"></dd>
 
-                        <dt class="col-sm-2">Nachname</dt>
-                        <dd class="col-sm-10" id="nachname"></dd>
+                        <dt class="col-3">Nachname</dt>
+                        <dd class="col-9" id="nachname"></dd>
 
-                        <dt class="col-sm-2">Geschlecht</dt>
-                        <dd class="col-sm-10" id="geschlecht"></dd>
+                        <dt class="col-3">Geschlecht</dt>
+                        <dd class="col-9" id="geschlecht"></dd>
 
-                        <dt class="col-sm-2">Geburtsdatum</dt>
-                        <dd class="col-sm-10" id="geburtsdatum"></dd>
+                        <dt class="col-3">Geburtsdatum</dt>
+                        <dd class="col-9" id="geburtsdatum"></dd>
 
-                        <dt class="col-sm-2">Intoleranzen</dt>
-                        <dd class="col-sm-10" id="intoleranzen"></dd>
+                        <dt class="col-3">Intoleranzen</dt>
+                        <dd class="col-9" id="intoleranzen"></dd>
 
-                        <dt class="col-sm-2">Blutgruppe</dt>
-                        <dd class="col-sm-10" id="blutgruppe"></dd>
+                        <dt class="col-3">Blutgruppe</dt>
+                        <dd class="col-9" id="blutgruppe"></dd>
 
-                        <dt class="col-sm-2">Notfallkontakt</dt>
-                        <dd class="col-sm-10" id="notfallkontakt"></dd>
+                        <dt class="col-3">Notfallkontakt</dt>
+                        <dd class="col-9" id="notfallkontakt"></dd>
                     </dl>
                 </div>
             </div>
