Profil Design angepasst

--- a/oshealthrec-website/public/patient/profil.html
+++ b/oshealthrec-website/public/patient/profil.html
@@ -59,7 +59,7 @@
         <div class="col-8">
             <div class="card bg-light">
                 <div class="card-body">
-                    <dl class="row">
+                    <dl class="">
                         <dt class="col-3">Vorname</dt>
                         <dd class="col-9" id="vorname"></dd>
 
