Profil Design angepasst

--- a/oshealthrec-website/Vorlagen/vorlage-patient.html
+++ b/oshealthrec-website/Vorlagen/vorlage-patient.html
@@ -39,29 +39,35 @@
 </nav>
 
 <div class="container">
-    <div class="row">
-        <div class="col"></div>
-        <div class="col">
+    <div class="row justify-content-center">
+        <div class="col-auto">
             <div class="card bg-light">
                 <div class="card-body">
-                    Vorname
-                    Ole<br>
-                    Nachname
-                    Kohl<br>
-                    Geschlecht
-                    Männlich<br>
-                    Geburtsdatum
-                    05.03.1997<br>
-                    Intoleranzen
-                    Nikotinallergie, Allergische Rhinitis<br>
-                    Blutgruppe
-                    AB Rh pos<br>
-                    Notfallkontakt
-                    01764379124
+                    <dl class="">
+                        <dt class="">Vorname</dt>
+                        <dd class="" id="vorname">Ole</dd>
+
+                        <dt class="">Nachname</dt>
+                        <dd class="" id="nachname">Kohl</dd>
+
+                        <dt class="">Geschlecht</dt>
+                        <dd class="" id="geschlecht">Männlich</dd>
+
+                        <dt class="">Geburtsdatum</dt>
+                        <dd class="" id="geburtsdatum">05.03.1997</dd>
+
+                        <dt class="">Intoleranzen</dt>
+                        <dd class="" id="intoleranzen">Nikotinallergie, Allergische Rhinitis</dd>
+
+                        <dt class="">Blutgruppe</dt>
+                        <dd class="" id="blutgruppe">AB Rh pos</dd>
+
+                        <dt class="">Notfallkontakt</dt>
+                        <dd class="" id="notfallkontakt">01764379124</dd>
+                    </dl>
                 </div>
             </div>
         </div>
-        <div class="col"></div>
     </div>
 </div>
 
