--- a/oshealthrec-website/public/patient/profil.html
+++ b/oshealthrec-website/public/patient/profil.html
@@ -54,37 +54,35 @@
             </div>
         </div>
     </div>
-    <div class="row">
-        <div class="col"></div>
-        <div class="col-8">
+    <div class="row justify-content-center">
+        <div class="col-auto">
             <div class="card bg-light">
                 <div class="card-body">
                     <dl class="">
-                        <dt class="col-3">Vorname</dt>
-                        <dd class="col-9" id="vorname"></dd>
+                        <dt class="">Vorname</dt>
+                        <dd class="" id="vorname">Ole</dd>
 
-                        <dt class="col-3">Nachname</dt>
-                        <dd class="col-9" id="nachname"></dd>
+                        <dt class="">Nachname</dt>
+                        <dd class="" id="nachname">Kohl</dd>
 
-                        <dt class="col-3">Geschlecht</dt>
-                        <dd class="col-9" id="geschlecht"></dd>
+                        <dt class="">Geschlecht</dt>
+                        <dd class="" id="geschlecht">Männlich</dd>
 
-                        <dt class="col-3">Geburtsdatum</dt>
-                        <dd class="col-9" id="geburtsdatum"></dd>
+                        <dt class="">Geburtsdatum</dt>
+                        <dd class="" id="geburtsdatum">05.03.1997</dd>
 
-                        <dt class="col-3">Intoleranzen</dt>
-                        <dd class="col-9" id="intoleranzen"></dd>
+                        <dt class="">Intoleranzen</dt>
+                        <dd class="" id="intoleranzen">Nikotinallergie, Allergische Rhinitis</dd>
 
-                        <dt class="col-3">Blutgruppe</dt>
-                        <dd class="col-9" id="blutgruppe"></dd>
+                        <dt class="">Blutgruppe</dt>
+                        <dd class="" id="blutgruppe">AB Rh pos</dd>
 
-                        <dt class="col-3">Notfallkontakt</dt>
-                        <dd class="col-9" id="notfallkontakt"></dd>
+                        <dt class="">Notfallkontakt</dt>
+                        <dd class="" id="notfallkontakt">01764379124</dd>
                     </dl>
                 </div>
             </div>
         </div>
-        <div class="col"></div>
     </div>
 </div>
 
